deployments/pathweb/cluster-services/traefik/dashboard/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-redirect
  namespace: traefik
spec:
  redirectRegex:
    regex: ^https://(.*)\.pathweb\.clusters\.home\.yrf\.me/$
    replacement: https://${1}.pathweb.clusters.home.yrf.me/dashboard/
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ak-outpost-authentik-embedded-outpost
  namespace: traefik
spec:
  chain:
    middlewares:
    - name: ak-outpost-authentik-embedded-outpost
      namespace: home-network
