deployments/pathweb/cluster-services/traefik/dashboard/healthcheck.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-internal-ping
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
spec:
  ingressClassName: traefik-traefik
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`ingress.pathweb.clusters.home.yrf.me`) && Path(`/ping`)
    priority: 2000000000
    services:
    - kind: TraefikService
      name: ping@internal
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-external-ping
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik-external
spec:
  ingressClassName: traefik-external
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`external-ingress.pathweb.clusters.home.yrf.me`) && Path(`/ping`)
    priority: 2000000000
    services:
    - kind: TraefikService
      name: ping@internal
