deployments/pathweb/cluster-services/traefik/dashboard/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: home-network-ak-outpost-authentik-embedded-outpost@kubernetescrd,traefik-traefik-dashboard-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    app.kubernetes.io/name: traefik-dashboard
    external-dns: local-pdns
spec:
  ingressClassName: traefik-traefik
  rules:
  - host: traefik-internal.pathweb.clusters.home.yrf.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: traefik-dashboard
            port:
              name: traefik
  - host: traefik-external.pathweb.clusters.home.yrf.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: traefik-external-dashboard
            port:
              name: traefik
  tls:
  - hosts:
    - "*.pathweb.clusters.home.yrf.me"
    secretName: pathweb-wildcard-cert
